# bevy_component_load

./: Cargo.toml
src/: lib.rs  test.rs
