[package]
name = "bevy_component_load"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7.0"
anyhow = "1.0.52"
bevy_loading = "0.2.0"
bevy_ref_component = {git = "https://github.com/Semihazah/bevy_ref_component.git" }

[patch."https://github.com/Semihazah/bevy_ref_component.git"]
bevy_ref_component = {path = "C:/Users/ZHuds/GitHub/bevy_ref_component"}