[package]
name = "bevy_component_load"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version = "0.8.0", default-features = false, features = ["bevy_asset"]}
anyhow = "1.0.52"
iyes_progress = {version = "0.5.0", features = ["assets"]}
#iyes_progress = {git = "https://github.com/shanesveller/iyes_progress.git", branch = "shanesveller/iyes-loopless-0.6", features = ["assets"]}
bevy_ref_component = {git = "https://github.com/Semihazah/bevy_ref_component.git" }