[package]
name = "bevy_component_load"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version = "0.9.1", default-features = false, features = ["bevy_asset"]}
anyhow = "1.0.52"
iyes_progress = {version = "0.7.1", features = ["assets"], optional = true}
#iyes_progress = {git = "https://github.com/shanesveller/iyes_progress.git", branch = "shanesveller/iyes-loopless-0.6", features = ["assets"]}

bevy-trait-query = "0.1.1"

[features]
asset_tracking = ["dep:iyes_progress"]